[package]
name = "warhammer_roster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
bson = "2.6.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
mongodb = "2.5.0"
rand = "0.8.5"
serde = "1.0.163"
serde_json = "1.0.104"
tokio = "1.28.2"
